<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.fogospt.ui.dashboard.DashboardFragment"
        android:label="@string/menu_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.fogospt.ui.fires.FiresFragment"
        android:label="@string/menu_fires"
        tools:layout="@layout/fragment_fires" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.fogospt.ui.new_fire.NewfireFragment"
        android:label="@string/menu_new_fire"
        tools:layout="@layout/fragment_new_fire" />
</navigation>