<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.new_fire.NewfireFragment">

    <LinearLayout
        android:weightSum="7"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:layout_weight="1"
            android:id="@+id/new_fire_person_name"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:hint="@string/person_name"
            android:inputType="text" />
        <EditText
            android:layout_weight="1"
            android:id="@+id/new_fire_person_cc"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:hint="@string/person_cc"
            android:inputType="number" />
        <EditText
            android:layout_weight="1"
            android:id="@+id/new_fire_district"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:hint="@string/district"
            android:inputType="text" />
        <TextView
            android:layout_weight="1"
            android:id="@+id/new_fire_date_label"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:text="@string/new_fire_date_label"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="24sp"
            />
        <DatePicker
            android:layout_weight="1"
            android:id="@+id/dpDate"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:datePickerMode="spinner"
            android:calendarViewShown="false"
            />
        <EditText
            android:layout_weight="1"
            android:id="@+id/new_fire_photo"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:hint="@string/photograph"
            android:inputType="text" />

        <LinearLayout
            android:layout_weight="1"
            android:weightSum="1"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_submit_form"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_marginHorizontal="5dp"
                android:text="@string/submitform" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>